[project]
name = "finetune-ayurlekha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "transformers>=4.52.4",
    "trl>=0.19.0",
]
